--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "webpack-dev-server --port=4200",
+    "start": "node src/server/server.js",
     "build": "webpack",
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
@@ -23,11 +23,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "body-parser": "^1.18.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "jquery": "^3.2.1",
+    "mongodb": "^2.2.33",
     "rxjs": "^5.1.0",
     "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
